# SmartSim

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .wci.yml  CITATION.cff  Changelog.rst  Dockerfile  Jenkinsfile  LICENSE.md  MANIFEST.in  Makefile  README.md  brainstorm.py  build.sh  build_generic_rpm  build_rpm  codecov.yml  conf.py  config.toml  conftest.py  control.toml  deploy.sh  docker-compose.yml  dragon_driver.py  fs.py  fsdemo.py  generate.toml  index.rst  mli.py  mpo-config.toml  orchestrator_0.err  orchestrator_0.out  preview_test.html  pyproject.toml  quickstart_young.md  reader.py  requirements-dev.txt  requirements-mypy.txt  requirements.txt  (+6 more)
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build_docs.yml  build_wheels.yml  (+6 more)
MOM6_base_config/: MOM_input  MOM_override  input.nml
PMN/: modelconfig.py
Training-Run/: smartsim_params.txt
build-scripts/: build-deps.sh  build-keydb.sh  build-redis-ip.sh  build-redis.sh  build-redisai-cpu.sh  build-redisai-gpu.sh  build-silc.sh  build-smartredis.sh
data-generation/: model.py  run_model.py  setup_runs.py
doc/: Doxyfile_c  Doxyfile_cpp  Doxyfile_fortran  MPO.rst  Makefile  advanced_topics.rst  batch_settings.rst  changelog.md  changelog.rst  clients.rst  cmdservers.rst  code_of_conduct.rst  community.rst  conf.py  contributing.rst  contributing_examples.rst  developer.rst  developers.rst  dragon.rst  ensemble.rst  experiment.rst  generate.rst  index.rst  installation.rst  launchers.rst  log.rst  ml_features.rst  model.rst  orch_hold_file.rst  orchestrator.rst  overview.rst  requirements-doc.txt  run_settings.rst  silc-overview.rst  simulate.rst  smartdashboard.rst  smartredis.rst  smartsim_zoo.rst  sr_advanced_topics.rst  sr_cpp_walkthrough.rst  (+8 more)
docs/: CNAME  index.html
examples/: SmartSim.ipynb
examples/inference-scaling/: CMakeLists.txt  README.rst  check_model.py  client_test_utils.h  inference_scaling.cpp  inference_scaling_imagenet.cpp  mnist.py  process_results.py  run-inference-session-imagenet.py  run-inference-session.py
examples/inference-scaling/imagenet/: cat.raw  data_processing_script.txt  dump_image_to_stdout.py  model_checker.py  model_saver.py
examples/inference-scaling/mnist_data/: data_processing_script.txt
mmmhub-workshop-examples/: .gitignore  batch_job.sh  driver_in_batch.py  driver_submits_batch.py
mmmhub-workshop-examples/proglets/: CMakeLists.txt
mmmhub-workshop-examples/proglets/cpp/: smartredis_mnist.cpp  smartredis_put_get_3D.cpp
mmmhub-workshop-examples/proglets/fortran/: example_utils.F90  smartredis_dataset.F90  smartredis_mnist.F90  smartredis_put_get_3D.F90
scripts/: start_cmd_server.py
smartsim/: __init__.py  client.py  clusterConnection.py  cmdClient.py  cmdSchema.py  cmdServer.py  cmd_center.py  config.py  connection.py  constants.py  dbnode.py  ensemble.py  entity.py  experiment.py  helpers.py  indirect.py  junction.py  log.py  model.py  orchestrator.py  protoclient.py  run_ss.py  servertype.py  setup.py  simModule.py  slurm.py  smartSimNode.py  smartsimdb.conf  ssModule.py  state.py  status.py  target.py  telemetrymanager.py  telemetrymonitor.py  types.py  version.py  wlm.py
smartsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smartsim/tests/clients/c/: CMakeLists.txt  c_client_test_utils.h  client_test_array_1d_put_get.c  client_test_array_2d_put_get.c  client_test_exact_key_array_1d_put_get.c  client_test_exact_key_array_2d_put_get.c  client_test_exact_key_scalar_put_get.c  client_test_poll_exact_key_and_check_scalar.c  client_test_poll_key_and_check_scalar.c  client_test_scalar_put_get.c  test_c_client.py
smartsim/tests/clients/cpp/: CMakeLists.txt  client_test.cpp  client_test_1D.cpp  client_test_2D.cpp  client_test_3D.cpp  client_test_array_put_get_1D.cpp  client_test_array_put_get_1D_cluster.cpp  client_test_array_put_get_2D.cpp  client_test_array_put_get_3D.cpp  client_test_array_put_get_3D_exact_key.cpp  client_test_env_parsing.cpp  client_test_poll_check_exact_keys_scalar_receive.cpp  client_test_poll_check_exact_keys_scalar_send.cpp  client_test_poll_check_scalar_receive.cpp  client_test_poll_check_scalar_receive_cluster.cpp  client_test_poll_check_scalar_send.cpp  client_test_poll_check_scalar_send_cluster.cpp  client_test_scalar_put_get.cpp  client_test_scalar_put_get_cluster.cpp  client_test_scalar_put_get_exact_keys.cpp  client_test_utils.h  poll_and_key_value_check_int64.cpp  test_cpp_client.py
smartsim/tests/clients/fortran/: CMakeLists.txt  array_1d_unit_test.F90  array_2d_unit_test.F90  client.nml  cmake_install.cmake  exact_key_array_1d_unit_test.F90  exact_key_array_2d_unit_test.F90  exact_key_poll_key_and_check_scalar_unit_test.F90  exact_key_scalar_unit_test.F90  parallel_driver.F90  poll_key_and_check_scalar_unit_test.F90  scalar_unit_test.F90  serial_driver.F90  test_fortran_client.py  unit_test.F90  unit_test_aux.F90  unit_test_aux.mod
src/: __init__.py  helpers.py  mpo-config.toml  run_mpo.py  run_ss.py  setup.py  state.py
tests/: .coverage  entitylist.py  just_for_this.py  test_alps_settings.py  test_application.py  test_batch_settings.py  test_buildenv.py  test_builder.py  test_builder_operations.py  test_cli.py  test_cobalt_parser.py  test_collector_manager.py  test_collector_sink.py  test_collectors.py  test_colo_model_local.py  test_colo_model_lsf.py  test_command_generation.py  test_config.py  test_containers.py  test_controller.py  test_controller_errors.py  test_dbnode.py  test_deprecations.py  test_dragon_backend.py  test_dragon_client.py  test_dragon_comm_utils.py  test_dragon_installer.py  test_dragon_launcher.py  test_dragon_run_policy.py  test_dragon_run_request.py  test_dragon_run_request_nowlm.py  test_dragon_runsettings.py  test_dragon_step.py  test_ensemble.py  test_ensemble_operations.py  test_entity_utils.py  test_entitylist.py  test_experiment.py  test_featurestore.py  test_file_operations.py  (+57 more)
tools/: README.rst  c_code_generator.py  fortran_code_generator.py  fortran_unit_test_generator.py
(+2340 files in other folders)
