# BSD 2-Clause License
#
# Copyright (c) 2021-2024, Hewlett Packard Enterprise
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


[build-system]
requires = ["packaging>=24.0", "setuptools>=70.0", "wheel", "cmake>=3.13"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
exclude = '''
(
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
  | .*\.py
)
'''
force-exclude = '''
(
  .*\.dragon/*
)
'''


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"
testpaths = [
    "tests"
]
norecursedirs = [
    "tests/test_configs",
    "tests/_legacy",
]
markers = [
  "group_a: fast test subset a",
  "group_b: fast test subset b",
  "slow_tests: tests that take a long duration to complete",
  "dragon: tests that must be executed in a dragon runtime",
]

[tool.isort]
# supress circular import warning
profile = "black"
skip = ["tests/test_configs/circular_config"]
skip_glob="smartsim/_core/.dragon/*"

[tool.coverage.run]
source = ["smartsim"]
# see test_configs/*_cov.cfg for "omit"

[tool.coverage.report]
ignore_errors = true
# see test_configs/*_cov.cfg for "exclude_lines"

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
namespace_packages = true
files = [
  "smartsim"
]
plugins = ["pydantic.mypy"]
ignore_errors = false

# Dynamic typing
disallow_any_generics = true
warn_return_any = true

# Strict fn defs
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Probably Unintended Branches/Blocks
# warn_unreachable = true

# Safety/Upgrading Mypy
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

# Misc Strictness Settings
strict_concatenate = false
strict_equality = true

# Additional Error Codes
enable_error_code = [
    # "redundant-expr",
    "possibly-undefined",
    # "unused-awaitable",
    # "ignore-without-code",
    # "mutable-override",
    "truthy-bool",
    "truthy-iterable",
]

[[tool.mypy.overrides]]
# Ignore packages that are not used or not typed
module = [
  "coloredlogs",
  "redis.cluster",
  "keras",
  "torch",
  "smartsim.ml.torch.*",            # must solve/ignore inheritance issues
  "watchdog",
  "dragon.*",

  # Ignore these modules while the core refactor is on going. Uncomment as
  # needed for gradual typing
  #
  # FIXME: DO NOT MERGE THIS INTO DEVELOP BRANCH UNLESS THESE ARE PASSING OR
  #        REMOVED!!
  "smartsim._core._cli.*",
  "smartsim._core.control.manifest",
  "smartsim._core.entrypoints.dragon_client",
  "smartsim._core.launcher.launcher",
  "smartsim._core.launcher.local.*",
  "smartsim._core.launcher.lsf.*",
  "smartsim._core.launcher.pbs.*",
  "smartsim._core.launcher.sge.*",
  "smartsim._core.launcher.slurm.*",
  "smartsim._core.launcher.step.*",
  "smartsim._core.launcher.step_info",
  "smartsim._core.launcher.step_mapping",
  "smartsim._core.launcher.task_manager",
  "smartsim._core.utils.serialize",
  "smartsim._core.utils.telemetry.*",
  "smartsim.database.*",
  "smartsim.settings.sge_settings",
  "smartsim._core.control.controller_utils",
  "smartsim.entity.dbnode",
]
ignore_missing_imports = true
ignore_errors = true
