[metadata]
name = smartsim
description = AI Workflows for Science
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/CrayLabs/SmartSim
project_urls =
    Source = https://github.com/CrayLabs/SmartSim
    Documentation = https://www.craylabs.org

author = Sam Partee, Matt Ellis, Alessandro Rigazzi
author_email = spartee@hpe.com
contact = Sam Partee
contact_email = spartee@hpe.com
license = BSD 2-Clause License
keywords = scientific, ai, workflow, hpc, analysis
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
setup_requires =
    setuptools>=39.2
    cmake>=3.10
include_package_data = True
python_requires = >=3.7



[options.packages.find]
exclude =
    .third-party
    tests
    doc
    smartredis
