# BSD 2-Clause License
#
# Copyright (c) 2021-2024, Hewlett Packard Enterprise
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[metadata]
name = smartsim
description = AI Workflows for Science
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/CrayLabs/SmartSim
project_urls =
    Source = https://github.com/CrayLabs/SmartSim
    Documentation = https://www.craylabs.org

author = CrayLabs, a Hewlett Packard Enterprise OSS Organization
author_email = craylabs@hpe.com
contact = CrayLabs, a Hewlett Packard Enterprise OSS Organization
contact_email = craylabs@hpe.com
license = BSD 2-Clause License
keywords = scientific, ai, workflow, hpc, analysis
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
setup_requires =
    setuptools>=39.2
    cmake>=3.13
include_package_data = True
python_requires = >=3.9,<3.12

[options.packages.find]
include =
    smartsim*
exclude =
    .third-party
    tests
    doc
    smartredis

[options.package_data]
smartsim =
    py.typed
smartsim._core.bin =
    *
